# wg-obfuscator-swift

./: .gitignore  CMakeLists.txt  Package.resolved  Package.swift  README.md  build.sh
.github/workflows/: build.yml  test.yml
Sources/WGObfuscator/Core/: CryptoUtilities.swift  ObfuscationEngine.swift  PacketCodec.swift  WireGuardTypes.swift
Sources/WGObfuscator/Masking/: MaskingFactory.swift  MaskingProtocol.swift  STUNMasker.swift  STUNPacket.swift
Sources/WGObfuscator/Proxy/: ClientSession.swift  NATTable.swift  UDPProxy.swift
Tests/WGObfuscatorTests/: PerformanceTests.swift
Tests/WGObfuscatorTests/Core/: CryptoUtilitiesTests.swift  ObfuscationEngineTests.swift  PacketCodecTests.swift
Tests/WGObfuscatorTests/Integration/: EndToEndTests.swift
Tests/WGObfuscatorTests/Masking/: STUNMaskerTests.swift  STUNPacketTests.swift
cmake/: WGObfuscatorConfig.cmake.in
